--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,14 @@
+MouseInfo==0.1.3
+numpy==1.21.0
+opencv-python==4.5.2.54
+Pillow==8.2.0
 PyAutoGUI==0.9.52
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
 pynput==1.6.8
+pyperclip==1.8.2
+PyRect==0.1.4
+PyScreeze==0.1.27
+PyTweening==1.0.3
+six==1.16.0
+termcolor==1.1.0
